# ChangeLog for dev-libs/apr-util
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.123 2009/01/23 11:43:14 armin76 Exp $

  23 Jan 2009; Raúl Porcel <armin76@gentoo.org> apr-util-1.3.4.ebuild:
  arm/ia64/s390/sh stable wrt #246003

  18 Jan 2009; Tobias Klausmann <klausman@gentoo.org> apr-util-1.3.4.ebuild:
  Stable on alpha, bug #246003

  09 Jan 2009; Ferris McCormick <fmccor@gentoo.org> apr-util-1.3.4.ebuild:
  Sparc stable, Bug #246003.

  09 Jan 2009; Brent Baude <ranger@gentoo.org> apr-util-1.3.4.ebuild:
  Marking apr-util-1.3.4 ppc for bug 246003

  07 Jan 2009; Jeroen Roovers <jer@gentoo.org> apr-util-1.3.4.ebuild:
  Stable for HPPA (bug #246003).

  07 Jan 2009; Brent Baude <ranger@gentoo.org> apr-util-1.3.4.ebuild:
  Marking apr-util-1.3.4 ppc64 for bug 246003

  04 Jan 2009; Markus Meier <maekke@gentoo.org> apr-util-1.3.4.ebuild:
  amd64/x86 stable, bug #246003

*apr-util-1.3.4 (29 Aug 2008)

  29 Aug 2008; Benedikt Böhm <hollow@gentoo.org> +apr-util-1.3.4.ebuild:
  version bump wrt #235938

  16 Aug 2008; Jeroen Roovers <jer@gentoo.org> apr-util-1.3.2.ebuild:
  Stable for HPPA (bug #232671).

  08 Aug 2008; nixnut <nixnut@gentoo.org> apr-util-1.3.2.ebuild:
  Stable on ppc wrt bug 232671

  08 Aug 2008; Markus Rothe <corsair@gentoo.org> apr-util-1.3.2.ebuild:
  Stable on ppc64; bug #232671

  08 Aug 2008; Raúl Porcel <armin76@gentoo.org> apr-util-1.3.2.ebuild:
  alpha/ia64/sparc/x86 stable wrt #232671

  07 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
  apr-util-1.3.2.ebuild:
  stable amd64, bug 232671

*apr-util-1.3.2 (23 Jun 2008)

  23 Jun 2008; Benedikt Böhm <hollow@gentoo.org> +apr-util-1.3.2.ebuild:
  version bump wrt #228953

  15 Jun 2008; Benedikt Böhm <hollow@gentoo.org> apr-util-1.2.12.ebuild,
  apr-util-1.3.0.ebuild:
  do not run buildconf wrt #226051

*apr-util-1.3.0 (11 Jun 2008)
