@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/apr-util
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.123 2009/01/23 11:43:14 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/apr-util/ChangeLog,v 1.124 2009/06/08 21:10:21 arfrever Exp $
+
+*apr-util-1.3.7 (08 Jun 2009)
+
+  08 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +apr-util-1.3.7.ebuild:
+  Version bump.
 
   23 Jan 2009; Raúl Porcel <armin76@gentoo.org> apr-util-1.3.4.ebuild:
   arm/ia64/s390/sh stable wrt #246003
